Bug 165418 - Saving attachments over KIO does not work
Summary: Saving attachments over KIO does not work
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 1.10.90
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 171564 180722 190813 194019 (view as bug list)
Depends on:
Blocks:
 
Reported: 2008-06-30 14:14 UTC by Yuri Timenkov
Modified: 2009-06-03 21:43 UTC (History)
8 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Yuri Timenkov 2008-06-30 14:14:52 UTC
Version:           1.9.52 (using 4.00.83 (KDE 4.0.83 (KDE 4.1 Beta2), Kubuntu packages)
Compiler:          gcc
OS:                Linux (x86_64) release 2.6.24-19-openvz

I'm trying to save attachment to remote system via smb. "Save file" dialog opens and shows correct contents of remote file system, but after pressing OK button, Kmail displays error "Could not write the file /C$/work/письмо.doc." (There are Cyrillic letters in file name, but it doesn't matter).

I've found similar bug #69105 on KDE 3 , but didn't find way to reopen it.
Comment 1 FiNeX 2008-06-30 18:19:20 UTC
Are you able to save to the same share a file with that name using (for example) kate or kwrite?
Comment 2 Yuri Timenkov 2008-07-01 11:05:18 UTC
1) I can copy file to remote share with dolphin (with English letters)
2) Dolphin fails to copy file with Cyrillic names.
3) Same true for kate.
Both apps show error: Couldn't write to smb://ytimenkov@yt.sw.ru/C$/work/тест
So, there seems some problems in SMB kio and it's may be worth filing separate bug on smb kio (I have UTF-8 locale on linux + cp1251 on Windows).

4) KMail doesn't save files with English names either, so I suppose problem is in KMail.
Comment 3 Thomas McGuire 2008-07-03 17:00:35 UTC
Seems to be a KDE4 regression, this worked fine before (see bug 69105).
Comment 4 Yuri Timenkov 2008-08-19 12:26:29 UTC
Still doesn't work in KDE 4.1
KMail Version 1.10.0
KDE Version 4.1.00 (KDE 4.1.0)
Comment 5 Cyrill Helg 2008-12-15 20:54:39 UTC
I can confirm this issue.

Furthermore that save dialog always open the root folder /, not the home folder or latest used folder..
Comment 6 George Kiagiadakis 2008-12-15 20:56:36 UTC
Still valid for kmail 1.10.90, kde 4.1.85. I could confirm that with sftp:/
Comment 7 Jonathan Marten 2009-02-24 15:38:16 UTC
*** Bug 171564 has been marked as a duplicate of this bug. ***
Comment 8 Jonathan Marten 2009-02-24 15:39:53 UTC
From bug 171564:

right click the attachment and chose save.
Then go to some fish:// path and click Save As..

You get a error message stating: Could not write the file /path-without-fish://

Twist: The filename has been touched remotely, thus giving a file with the
attachments name with the size 0

Confirmed with current trunk, with original ~/.fishsrv.pl removed.

Something different happens if the attachment icon is dragged to a Dolphin or
Konqueror view showing the fish: path, instead of going through the save
dialogue.  Nothing is created there, not even an empty file, but an error box
is displayed with the message:

  The file or folder /tmp/kde-jjm4/kmailr11025.3/ATTACHMENT_NAME
  does not exist.

The same also happens in both these cases for saving to a smb: or ftp:
location.
Comment 9 Jonathan Marten 2009-02-24 15:40:24 UTC
*** Bug 180722 has been marked as a duplicate of this bug. ***
Comment 10 Jonathan Marten 2009-02-28 14:32:02 UTC
SVN commit 933232 by marten:

Fix problem of not being able to save attachments to a remote location.
QTemporaryFile::fileName() is only defined while the file is open, using it
after the close() passed a null source file to NetAccess::upload().

Also tidied up the error reporting.

BUG:165418


 M  +25 -10    kmcommands.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=933232
Comment 11 Jonathan Marten 2009-04-27 14:39:59 UTC
*** Bug 190813 has been marked as a duplicate of this bug. ***
Comment 12 Jonathan Marten 2009-06-03 21:43:29 UTC
*** Bug 194019 has been marked as a duplicate of this bug. ***