Fix problem of not being able to save attachments to a remote location. QTemporaryFile::fileName() is only defined while the file is open, using it after the close() passed a null source file to NetAccess::upload().

Also tidied up the error reporting.

BUG:165418

svn path=/trunk/KDE/kdepim/; revision=933232